--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-"homepage": "https://HakimaNoori.github.io/Interior-Design-Website",
+  "homepage": "https://HakimaNoori.github.io/Interior-Design-Website",
   "name": "interior-design-website",
   "private": true,
   "version": "0.0.0",
@@ -9,11 +9,13 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-     "deploy": "vite build && gh-pages -d dist"
+    "deploy": "vite build && gh-pages -d dist"
   },
   "dependencies": {
+    "framer-motion": "^12.4.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-icons": "^5.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.19.0",
